# template-python

./: .editorconfig  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yaml  feature.yaml
.github/workflows/: check.yml  ci.yml
src/template/: cli.py  lib.py
test/template/: test_template.py
